2007-02-01  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/build.c: Prevent compiling or executing of files without a
                filename extension(closes #1642029).
 * src/document.c: Made --line and --column also working for already
                   open files (thanks to Mark Knoop for his help).
 * THANKS, src/treeviews.c:
   Applied patch from Tomás Vírseda to sort the list of open files in
   the sidebar alphabetically (thanks).


2007-01-31  Enrico Tröger  <enrico.troeger@uvena.de>

 * scintilla/ScintillaGTK.cxx, src/document.c, src/document.h,
   src/keybindings.c, src/sci_cb.c, src/sciwrappers.c,
   src/sciwrappers.h, src/utils.c:
   Improved the auto scrolling of documents (actually done by Nick).


2007-01-30  Frank Lanitz  <frank@frank.uvena.de>

 * configure.in, THANKS, src/about.c, po/fi.po:
   Added Finnish translation (Thanks to Harri Koskinen).


2007-01-27  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/callbacks.c, src/document.c, src/document.h, src/keyfile.c,
   src/sci_cb.c, src/sciwrappers.c, src/sciwrappers.h:
   Fixed some scrolling issues with session files and files remotely
   open via the socket. Added need_scrolling flag to document struct.


2007-01-26  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c: Applied patch from Jeff Pohlmeyer to clear the line
                   marker when clearing the compile error markers.
 * geany.glade, src/geany.h, src/interface.c, src/keyfile.c,
   src/prefs.c, src/sci_cb.c:
   Added an option to disable auto completion of known symbols while
   typing (still can be forced by pressing the keybinding).


2007-01-25  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/vte.c: Applied patch from Jeff Pohlmeyer to improve loading of
              the VTE library.
 * src/ui_utils.c: Applied patch from Jeff Pohlmeyer to make the
                   window title Gnome HIG compatible.


2007-01-24  Enrico Tröger  <enrico.troeger@uvena.de>

 * data/filetype_extensions.conf, src/filetypes.c: