@@ -1,3 +1,9 @@
+2007-02-01  Nick Treleaven  <nick.treleaven@btinternet.com>
+
+ * src/ui_utils.c:
+   Show file path on window title after file name.
+
+
 2007-02-01  Enrico Tröger  <enrico.troeger@uvena.de>
 
  * src/build.c: Prevent compiling or executing of files without a
